tests/models/struct/unnamed/u64/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
   #[field(validate = validate_fn)]
    u64
);
fn main() {}
